fixed the error grid-gap

--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ img {
     display: grid;
     -ms-grid-columns: 1fr 55px 1fr 55px 1fr;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 55px;
+    column-gap: 55px;
     padding: 0 100px;
 }
 
@@ -763,8 +763,8 @@ img {
     display: grid;
     -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
     grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
 }
 
 .places__card{
@@ -851,7 +851,7 @@ img {
     display: grid;
     -ms-grid-columns: 1fr 108px 1fr;
     grid-template-columns: repeat(2, 1fr);
-    grid-column-gap:  108px;
+    column-gap:  108px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -903,8 +903,8 @@ img {
     display: grid;
     -ms-grid-columns: 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr;
     grid-template-columns: repeat(6, 1fr);
-    grid-column-gap:  57px;
-    grid-row-gap:  57px;
+    column-gap:  57px;
+    row-gap:  57px;
 }
 
 .top__card-pic {
@@ -1081,7 +1081,7 @@ img {
     }
     .benefits__cards {
         padding: 0 15px;
-        grid-column-gap: 35px;
+        column-gap: 35px;
     }
     .benefits__title {
         padding: 55px 15px;
@@ -1099,7 +1099,7 @@ img {
         grid-column: span 6;
     }
     .tours__tour {
-        grid-column-gap: 35px;
+        column-gap: 35px;
     }
     .tour__info {
         padding-left: 0;
@@ -1111,8 +1111,8 @@ img {
         margin-bottom: 15px;
     }
     .top__cards {
-        grid-column-gap: 25px;
-        grid-row-gap: 55px;
+        column-gap: 25px;
+        row-gap: 55px;
     }
     .top__card {
         -ms-grid-column-span: 3;
